--- a/workflow/client/Dockerfile
+++ b/workflow/client/Dockerfile
@@ -2,7 +2,7 @@ FROM node:alpine as builder
 
 WORKDIR '/app'
 
-COPY package.json .
+COPY package*.json ./
 RUN npm install
 
 COPY . .
@@ -10,4 +10,5 @@ COPY . .
 RUN npm run build
 
 FROM nginx
+EXPOSE 80
 COPY --from=builder /app/build /usr/share/nginx/html
