--- a/simplek8s/postgres-deployment.yaml
+++ b/simplek8s/postgres-deployment.yaml
@@ -27,8 +27,8 @@ spec:
                       mountPath: /var/lib/postgresql/data
                       subPath: postgres
                   env:
-                    - name: PGPASSWORD
+                    - name: POSTGRES_PASSWORD
                       valueFrom:
                         secretKeyRef:
                                 name: pgpassword
-                                key: PGPASSWORD
+                                key: POSTGRES_PASSWORD
